Fix blocker that is used while dragging windows
It was covering side panel

--- a/client/app/styles/app.less
+++ b/client/app/styles/app.less
@@ -39,8 +39,6 @@ html {
 }
 
 .blocker {
-    width: 100vw;
-    height: 100vh;
     z-index: 100;
     display: none;
     position: absolute;
